crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@171.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select fcompos3(row(3,'three'));"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..15 "fcompos3"
      Ascii40@15..16 "("
      RowExpr@16..29
        Row@16..19 "row"
        Ascii40@19..20 "("
        AConst@20..21
          Iconst@20..21 "3"
        Ascii44@21..22 ","
        AConst@22..29
          Sconst@22..29 "'three'"
  Ascii41@29..30 ")"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

