crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@179.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select text(row('Jim', 'Beam'));"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      TextP@7..11 "text"
      Ascii40@11..12 "("
      RowExpr@12..29
        Row@12..15 "row"
        Ascii40@15..16 "("
        AConst@16..21
          Sconst@16..21 "'Jim'"
        Ascii44@21..22 ","
        Whitespace@22..23 " "
        AConst@23..29
          Sconst@23..29 "'Beam'"
  Ascii41@29..30 ")"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

