crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@182.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select f.last from fullname f;
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..13
    ColumnRef@7..13
      Ident@7..8 "f"
      Ascii46@8..9 "."
      LastP@9..13 "last"
  Whitespace@13..14 " "
  From@14..18 "from"
  Whitespace@18..19 " "
  RangeVar@19..29
    Ident@19..27 "fullname"
    Whitespace@27..28 " "
    Alias@28..29
      Ident@28..29 "f"
  Ascii59@29..30 ";"

