crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@183.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select last(f) from fullname f;
---
SelectStmt@0..31
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..13
    FuncCall@7..13
      LastP@7..11 "last"
      Ascii40@11..12 "("
      ColumnRef@12..13
        Ident@12..13 "f"
  Ascii41@13..14 ")"
  Whitespace@14..15 " "
  From@15..19 "from"
  Whitespace@19..20 " "
  RangeVar@20..30
    Ident@20..28 "fullname"
    Whitespace@28..29 " "
    Alias@29..30
      Ident@29..30 "f"
  Ascii59@30..31 ";"

