crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@184.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function longname(fullname) returns text language sql\nas $$select $1.first || ' ' || $1.last$$;"
---
CreateFunctionStmt@0..102
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..24 "longname"
  Ascii40@24..25 "("
  FunctionParameter@25..33
    TypeName@25..33
      Ident@25..33 "fullname"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Returns@35..42 "returns"
  Whitespace@42..43 " "
  TypeName@43..47
    TextP@43..47 "text"
  Whitespace@47..48 " "
  DefElem@48..60
    Language@48..56 "language"
    Whitespace@56..57 " "
    SqlP@57..60 "sql"
  Newline@60..61 "\n"
  DefElem@61..101
    As@61..63 "as"
    Whitespace@63..64 " "
    List@64..101
      Sconst@64..101 "$$select $1.first ||  ..."
  Ascii59@101..102 ";"

