crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@185.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select f.longname from fullname f;
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..17
    ColumnRef@7..17
      Ident@7..8 "f"
      Ascii46@8..9 "."
      Ident@9..17 "longname"
  Whitespace@17..18 " "
  From@18..22 "from"
  Whitespace@22..23 " "
  RangeVar@23..33
    Ident@23..31 "fullname"
    Whitespace@31..32 " "
    Alias@32..33
      Ident@32..33 "f"
  Ascii59@33..34 ";"

